# RustSkinsArbitrage

./: app.py  bot.py  main.py  run_daily.py  skins.db  updater.py
parsers/: lootfarm_parser.py  rustypot_parser.py
rust/rustypot_parser/: Cargo.toml
rust/rustypot_parser/src/: lib.rs
src/: bot.py
src/database/: init_db.py  migrate_add_updated_at.py
src/parsers/: cstrade_parser.py  rustbet_parser.py  swapgg_parser.py
src/services/: run_daily.py  updater.py
utils/: compare.py
