[package]
name = "rustypot_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustypot_ffi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pyo3-build-config = "0.20"